Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20519

Query plan regression with optimizer_use_condition_selectivity > 1

    XMLWordPrintable

Details

    Description

      The optimizer can choose very bad execution plans for certain queries with the default optimizer_use_condition_selectivity=4 in MariaDB 10.4. Setting optimizer_use_condition_selectivity=1 allows you to work around the problem.

      Attachments

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.75d
                  3.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.